# routes/index.js
@@ -3,11 +3,6 @@ const passport = require('passport');
 
 router.use('/', require('./swagger'));
 
-// router.get('/', (req, res) => {
-//     //#swagger.tags=['Match Maker']
-//     res.send('Welcome to Match Maker');
-// });
-
 router.use('/lovebox', require('./lovebox'));
 router.use('/connectbox', require('./connectbox'));
 
@@ -20,18 +15,6 @@ router.get('/logout', (req, res, next) => {
         }
         res.redirect('/?message=You have been Logged out successfully');
     });
-});
-
-router.get('/github/callback', passport.authenticate('github', {
-    failureRedirect: 'api-docs',
-    session: false
-}),
-(req, res) => {
-    req.session.user = {
-        id: req.user.id,
-        displayName: req.user.displayName || req.user.username || req.user.name,
-    };
-    res.redirect('/');
 });
 
 module.exports = router;
