# swagger.json
@@ -6,11 +6,11 @@
     "version": "1.0.0",
     "title": "REST API"
   },
-  "host": "localhost:9090",
+  "host": "p2-crud.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http",
-    "https"
+    "https",
+    "http"
   ],
   "paths": {
     "/login": {
@@ -24,16 +24,6 @@
       }
     },
     "/logout": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/github/callback": {
       "get": {
         "description": "",
         "responses": {
